--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,21 +1,73 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Character Encoding -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/stock-indicators.png" />
+
+    <!-- Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Theme Color for Mobile Browsers -->
     <meta name="theme-color" content="#000000" />
+
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Stock Indicators is a comprehensive platform providing real-time stock data, analytics, and insights to help investors make informed decisions."
     />
+    <meta name="keywords" content="Stock, Indicators, Finance, Analytics, Real-time Data, Investment, Market Analysis" />
+    <meta name="author" content="Your Company Name" />
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="Stock Indicators" />
+    <meta property="og:description" content="Real-time stock data and analytics to empower your investment decisions." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.yourdomain.com/" />
+    <meta property="og:image" content="%PUBLIC_URL%/stock-indicators-og.png" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stock Indicators" />
+    <meta name="twitter:description" content="Real-time stock data and analytics to empower your investment decisions." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/stock-indicators-twitter.png" />
+
+    <!-- Favicon and Apple Touch Icon -->
+    <link rel="icon" href="%PUBLIC_URL%/stock-indicators.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/stock-indicators.png" />
+
+    <!-- Web App Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>stock-indicators</title>
+
+    <!-- Title -->
+    <title>Stock Indicators</title>
+
+    <!-- Google Analytics 4 (GA4) Global Site Tag -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-S40RNDXNQR');
+    </script>
+
+    <!-- Content Security Policy (Optional but Recommended) -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://www.google-analytics.com; font-src 'self'; connect-src 'self' https://www.google-analytics.com;"
+    />
   </head>
   <body>
+    <!-- No JavaScript Fallback Message -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- Root Element for React -->
     <div id="root"></div>
+
+    <!-- Preload Critical Assets (Optional) -->
+    <!--
+    <link rel="preload" href="%PUBLIC_URL%/static/css/main.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css"></noscript>
+    -->
   </body>
 </html>
